# imseg

./: CMakeLists.txt  README.md
cuda/: CMakeLists.txt
cuda/include/: cuda_methods.h  segmentation.h
cuda/src/: cuda_methods.cu  main.cpp  main.cpp~  segmentation.cpp  segmentation.cpp~
openmp/: CMakeLists.txt  CMakeLists.txt~
openmp/include/: pdensity.h  segmentation.h~
openmp/src/: main.cpp  main.cpp~  pdensity.cpp  segmentation.cpp
src/: main.cpp  segmentation.cpp
